@@ -1,4 +1,13 @@
 current:
+  * add support for Interleaved 2 of 5 symbology!
+    - again no check digit option yet
+  * increase decode window from 8 to 16 bars
+    - remove Code 39 "extra bar" hack
+    - add Code 39 quiet zone check
+    - facilitate Interleaved 2 of 5
+  * optimize character width calculations for all symbologies
+  * fix image scanner bug w/lost symbols at end of scan passes
+  * fix EAN-8 buffer overrun case
   * add API doc footer
   * add API documentation generated by Doxygen
     - markup, cleanup and finish writing header comments
